--- a/app/views/items/_item.html.haml
+++ b/app/views/items/_item.html.haml
@@ -1,5 +1,5 @@
 .list
-  = link_to '#', class: "list__link" do
+  = link_to "/items/#{item.id}", class: "list__link" do
     - item.images.first(1).each do |image|
       = image_tag image.src.url, class: "list__image"
     .details
