--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -74,7 +74,8 @@
       %span.item-price__fee
         送料込み
       %p.item-buy-btn
-        = link_to "購入画面に進む", "#", class: 'item-buy-btn__content'
+        = link_to item_purchase_index_path(@item.id), class: 'item-buy-btn__content' do
+          購入画面に進む
       %p.item-edit-btn
         = link_to "商品の編集", "#", class: 'item-edit-btn__content'
       %p.item-stop-btn
