--- a/app/assets/stylesheets/items.scss
+++ b/app/assets/stylesheets/items.scss
@@ -3,7 +3,12 @@
   width: 100%;
   height: 100%;
   font-family: "Source Sans Pro", Helvetica, Arial, "游ゴシック体", "YuGothic", "メイリオ", "Meiryo", sans-serif;
-
+  .flash{
+    background-color:#3CCACE;
+    color:white;
+    text-align:center;
+    padding:10px;
+    }
   .main{
     &--vanner{
       width: 100%;
