--- a/app/views/card/new.html.haml
+++ b/app/views/card/new.html.haml
@@ -1,7 +1,4 @@
-.header
-
-.page__header
-  FURIMA  >  支払い方法
+= render 'items/header'
 
 .card_registration
   .card_registration__whole
@@ -51,4 +48,4 @@
           #card_token
           = submit_tag "追加する", id: "token_submit"
 
-.footer
+= render 'items/footer'
