--- a/app/views/card/show.html.haml
+++ b/app/views/card/show.html.haml
@@ -1,7 +1,5 @@
-.header
+= render 'items/header'
 
-.page__header
-  FURIMA  >  支払い方法
 
 .card_registration
   .card_registration__whole
@@ -27,4 +25,4 @@
         .form-card_registration--bottom--last
           支払い方法について
 
-.footer
+= render 'items/footer'
