--- a/app/views/purchase/done.html.haml
+++ b/app/views/purchase/done.html.haml
@@ -1,8 +1,12 @@
+= render 'items/header'
+
 %h2 購入が完了しました！
 %p 
   = @item.name
 %p
   = "#{@item.price}円"
-  
+
 = link_to root_path, class: "done-btn" do
   トップに戻る
+
+= render 'items/footer'
