--- a/app/views/items/_form.html.haml
+++ b/app/views/items/_form.html.haml
@@ -1,8 +1,8 @@
 .item__content
-  - if @item.errors
+  - if flash[:error].present?
     %ul.errors__box
-      - @item.errors.full_messages.each do |message|
-        %li= message
+      - flash[:error].each do |e|
+        %li= e
   = form_for @item do |f|
     #image-box
       商品画像
