--- a/app/assets/stylesheets/item_form.scss
+++ b/app/assets/stylesheets/item_form.scss
@@ -11,7 +11,7 @@ a:hover{
   margin: 0 auto;
   font-family: "Source Sans Pro", Helvetica, Arial, "游ゴシック体", "YuGothic", "メイリオ", "Meiryo", sans-serif;
   .errors__box{
-    color:#ea352d;;
+    color:#ea352d;
     padding: 10px;
     }
   #image-box{
