--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -80,7 +80,7 @@
           = link_to "この商品を削除する", item_path(@item.id), method: :delete, class: 'item-destroy-btn__content'
       -else 
         %p.item-buy-btn
-          = link_to "購入画面に進む", "item_purchase_index_path(@item.id)", class: 'item-buy-btn__content'
+          = link_to "購入画面に進む", item_purchase_index_path(@item.id), class: 'item-buy-btn__content'
     - else
       %p.item-buy-btn
         = link_to "購入画面に進む", new_user_session_path, class: 'item-buy-btn__content'
