--- a/app/assets/stylesheets/items.scss
+++ b/app/assets/stylesheets/items.scss
@@ -276,6 +276,7 @@
             .list__image{
               height: 180px;
               width:230px;
+              object-fit: cover;
             }
             .details{
               padding: 16px;
