--- a/app/assets/stylesheets/show.scss
+++ b/app/assets/stylesheets/show.scss
@@ -6,7 +6,7 @@
   .item-box{
     padding:25px 40px 40px;
     margin: 40px auto 0;
-    width: 600px;
+    width: 620px;
     border-style: solid;
     border-width: 0;
     background-color: white;
@@ -21,12 +21,26 @@
       margin: 20px 0 0;
       height: 400px;
       position: relative;
-      .item-photo{
+      .photo__box{
         float: left;
-        &__content{
-          min-width: 300px;
-          max-width: 300px;
-          min-height: 375px;
+        margin-right: 15px;
+        .photo__innner{
+          background-color: #d3d3d3;
+          .main__image{
+            width: 300px;
+            height: 300px;
+            object-fit: cover;
+          }
+          ul{
+            display: flex;
+            flex-wrap: wrap;
+            width: 300px;
+            .image__list{
+              width: 60px;
+              height: 60px;
+              object-fit: cover;
+            }
+          }
         }
       }
       .sold{
@@ -80,7 +94,7 @@
     }
     .item-price{
       text-align: center;
-      margin: 20px 0 0;
+      margin: 60px 0 0;
       &__main{
         margin: 0 16px 0 0;
         font-size: 50px;
