--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -24,7 +24,7 @@
             .form__new-user__group-space
               = f.label :パスワード, class: "form__new-user__group-text"
               %span.form__new-user__group--alert 必須
-              = f.password_field :password, autocomplete: "new-password", placeholder: "#{@minimum_password_length}文字以上の半角英数字", class: "def-input"
+              = f.password_field :password, autocomplete: "new-password", placeholder: "#{@minimum_password_length}文字以上の半角英数字", class: "def-input", id: "PWForm"
             - if @minimum_password_length
               %p.form-info-text 
                 ※英字と数字の両方を含めて設定してください
@@ -32,7 +32,7 @@
             .form__new-user__group-space
               = f.label :"パスワード(確認用)", class: "form__new-user__group-text"
               %span.form__new-user__group--alert 必須
-              = f.password_field :password_confirmation, autocomplete: "new-password", placeholder: "#{@minimum_password_length}文字以上の半角英数字", class: "def-input"
+              = f.password_field :password_confirmation, autocomplete: "new-password", placeholder: "#{@minimum_password_length}文字以上の半角英数字", class: "def-input", id: "PWForm_confirmation"
             .form__new-user__group-checkbox
               %input#reveal_password{type: "checkbox",  class: "checkbox-btn"}
               = f.label :reveal_password, "パスワードを表示する", class: "checkbox-defult"
