--- a/app/views/purchase/index.html.haml
+++ b/app/views/purchase/index.html.haml
@@ -1,29 +1,56 @@
 = render 'items/header'
 
-%h2.buy-content__title
+.wrapper__items-buy
+  %h2.buy-content__title
     購入内容の確認
-  .buy-content__item
-    .buy-content__item__inner
-      .buy-item-main 
-        .buy-item-image
-          = image_tag "#{@item.images[0].url}", size: '64×64',class: 'buydetails-content__image'
-        .buy-item-detail
-          .buy-item-name
-            = @item.name
-            %p.buy-price 
-              = "#{@item.price}円"
-              %span.shipping-free（税込）送料込み
-%br
-%h3 支払い方法
-- if @default_card_information.blank?
-  %br /
-- else
-  = "**** **** **** " + @default_card_information.last4
-  - exp_month = @default_card_information.exp_month.to_s
-  - exp_year = @default_card_information.exp_year.to_s.slice(2,3)
-  = exp_month + " / " + exp_year
-%br
-= form_tag(action: :pay, method: :post) do
-  %button 購入する
+    .buy-content__item1
+      .buy-content__item__inner
+        .buy-item-main 
+          .buy-item-image
+            = image_tag @item.images.first.src.url, class: "main__image"
+          .buy-item-detail
+            .buy-item-name
+              = @item.name
+              %p.buy-price 
+                = "#{@item.price}円"
+                %span.shipping-free（税込）送料込み
+    .buy-content__item2
+      %form.buy-form
+        .buy-price-table
+          .buy-price-table__left
+            支払金額
+          .buy-price-table__right
+            = "#{@item.price}円"
+    .buy-content__user-info
+      .buy-content__user-info__inner
+        %h3 
+          支払い方法
+          .user-info-update
+            = link_to "変更する", "#", class: "update-btn"
+          .user-info-text
+          - if @default_card_information.blank?
+            %br /
+          - else
+            = "**** **** **** " + "#{@default_card_information.last4}"
+            %br
+            - exp_month = @default_card_information.exp_month.to_s
+            - exp_year = @default_card_information.exp_year.to_s.slice(2,3)
+            = "有効期限" + exp_month + " / " + exp_year
+            %br
+      .buy-content__user-info
+        .buy-content__user-info__inner
+          %h3 
+            配送先
+          .user-info-update
+            = link_to "変更する", "#", class: "update-btn"
+          .user-info-text
+            〒111-1111
+            %br
+            東京都
+            %br
+            ほげ
+            = form_tag(action: :pay, method: :post) do
+              %button.buy-button
+                = link_to "購入する", "#", class: "buy-button"
 
 = render 'items/footer'
