users.address/image修正

--- a/app/assets/stylesheets/purchase.scss
+++ b/app/assets/stylesheets/purchase.scss
@@ -26,6 +26,7 @@
               display: flex;
               justify-content: center;
               align-items: center;
+              object-fit: cover;
               .main__image{
                 width: 150px;
               }
