--- a/app/views/purchase/index.html.haml
+++ b/app/views/purchase/index.html.haml
@@ -3,28 +3,28 @@
 .wrapper__items-buy
   %h2.buy-content__title
     購入内容の確認
-    .buy-content__item1
+    .buy-content__item
       .buy-content__item__inner
-        .buy-item-main 
-          .buy-item-image
+        .buy-content__item__main 
+          .buy-content__item__main__image
             = image_tag @item.images.first.src.url, class: "main__image"
-          .buy-item-detail
-            .buy-item-name
+          .buy-content__item__main__detail
+            .buy-content__item__main__detail__name
               = @item.name
               %p.buy-price 
                 = "#{@item.price}円"
                 %span.shipping-free（税込）送料込み
-    .buy-content__item2
-      %form.buy-form
-        .buy-price-table
-          .buy-price-table__left
+    .buy-content__item
+      .buy-content__item__inner
+        .buy-content__item__price-table
+          .buy-content__item__price-table__left
             支払金額
-          .buy-price-table__right
+          .buy-content__item__price-table__right
             = "#{@item.price}円"
-    .buy-content__user-info1
-      .buy-content__user-info
-        .buy-content__user-info__inner
-          .user-info-text
+    .buy-content__user-card
+      .buy-content__user-card__inner
+        .buy-content__user-card__inner__text
+          .buy-content__user-card__inner__text__card
             支払い方法
           - if @default_card_information.blank?
             %br /
@@ -34,14 +34,14 @@
             - exp_month = @default_card_information.exp_month.to_s
             - exp_year = @default_card_information.exp_year.to_s.slice(2,3)
             = "有効期限" + exp_month + " / " + exp_year
-          .user-info-update
+          .buy-content__user-card__inner__text__update
             = link_to "変更する", "#", class: "update-btn"
             %br
-    .buy-content__user-info2
-      .buy-content__user-info
-        .buy-content__user-info__inner
+    .buy-content__user-address
+      .buy-content__user-address__inner
+        .buy-content__user-address__inner__text
           配送先
-          .user-info-text
+          .buy-content__user-address__inner__text__address
             %br
             〒
             = current_user.users_address.post_number
@@ -52,7 +52,7 @@
             %br
             = current_user.first_name
             = current_user.last_name
-          .user-info-update
+          .buy-content__user-address__inner__text__update
             = link_to "変更する", "#", class: "update-btn"
         .buy-button
         = form_tag(action: :pay, method: :post) do
