--- a/app/assets/stylesheets/card.scss
+++ b/app/assets/stylesheets/card.scss
@@ -1,3 +1,14 @@
-// Place all the styles related to the card controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+// クレジットカード情報入力画面
+
+.content__title {
+  height: 630px;
+  width: 700px;
+  background-color: #fff;
+  h2 {
+    font-size: 24px;
+    font-weight: bold;
+    padding: 8px 24px;
+    border-bottom: 1px solid #f5f5f5;
+    text-align: center;
+  }
+}
