--- a/app/views/purchase/index.html.haml
+++ b/app/views/purchase/index.html.haml
@@ -57,7 +57,7 @@
         .buy-button
         = form_tag(action: :pay, method: :post) do
           %button.buy-button
-            = link_to "購入する", done_item_purchase_index_path, class: "buy-button"
+            購入する
 
 
 = render 'items/footer'
