--- a/app/assets/stylesheets/purchase.scss
+++ b/app/assets/stylesheets/purchase.scss
@@ -26,9 +26,9 @@
               display: flex;
               justify-content: center;
               align-items: center;
-              object-fit: cover;
               .main__image{
-                width: 150px;
+                width: 100%;
+                object-fit: cover;
               }
             }
             &__detail{
