--- a/app/assets/stylesheets/card.scss
+++ b/app/assets/stylesheets/card.scss
@@ -1,14 +1,114 @@
 // クレジットカード情報入力画面
 
-.content__title {
-  height: 630px;
-  width: 700px;
-  background-color: #fff;
-  h2 {
-    font-size: 24px;
-    font-weight: bold;
-    padding: 8px 24px;
-    border-bottom: 1px solid #f5f5f5;
-    text-align: center;
+.card_registration{
+  background: #F5F5F5;
+  &__whole{
+    width: 70%;
+    margin: auto;
+    padding: 40px 0;
+    display: flex;
+    justify-content: space-between;
+  }
+  .content {
+    height: calc(100% - 30%);
+    width: calc(100% - 30%);
+    background-color:white;
+    float: right;
+    h2 {
+      height: 50px;
+      line-height: 50px;
+      font-size: 25px;
+      text-align: center;
+      font-weight: bold;
+    }
+    &__credit-card {
+      height: 600px;
+      width: 100%;
+      border-top: 2px solid #f8f8f8;
+      padding: 0 25%;
+      &__list, &__datelist, &__codelist {
+        width: 100%;
+        height: 30px;
+        margin-top: 40px;
+        position: relative;
+        label {
+          line-height: 30px;
+          font-size: 16px;
+          font-weight: bold;
+        }
+        span {
+          position: absolute;
+          margin-left: 10px;
+          margin-top: 2px;
+          background-color: #ff0211;
+          color: white;
+          border-radius: 2px;
+          font-size: 12px;
+          padding: 2px 3px;
+        }
+      }
+      #card_number, #cvc {
+        width: 40%;
+        margin: 8px 0 0;
+        height: 28px;
+        padding: 10px 16px 8px;
+        border-radius: 4px;
+        border: 1px solid #ccc;
+        background: #fff;
+        font-size: 16px;
+      }
+      ul {
+        width: 100%;
+        height: 100%;
+        margin-top: 20px;
+        display: flex;
+        li {
+          display: inline-block;
+          img {
+          width: 45px;
+          height: 35px;
+          margin-left: 7px;
+          }
+        }
+      }
+      &__selectdate {
+        display: flex;
+        margin: 8px 0 0;
+        select {
+          width: 10%;
+          height: 48px;
+          padding: 10px 16px 8px;
+          border-radius: 4px;
+          border: 1px solid #ccc;
+          background: #fff;
+          font-size: 16px;
+        }
+        p {
+          width: 60px;
+          height: 48px;
+          line-height: 48px;
+          text-align: center;
+        }
+      }
+      #card_token {
+        width: 50%;
+        padding: 0 10%;
+        margin-top: 30px;
+        input#token_submit {
+          width: 100px;
+          font-size: 18px;
+          margin-top: 20px;
+          line-height: 48px;
+          background: #3CCACE;
+          border: 1px solid #3CCACE;
+          color: white;
+          width: 50%;
+          font-size: 18px;
+          border-radius: 4px;
+          cursor: pointer;
+          border-style: none;
+        }
+      }
+    }
   }
 }
