クレジットカード情報登録後

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -34,4 +34,7 @@
  @import "devise/signup_address";
  @import "login";
  @import "devise/signup_done";
- @import "sold_display"
+ @import "sold_display";
+ @import "card_new";
+ @import "card_show";
+
