--- a/app/assets/stylesheets/show.scss
+++ b/app/assets/stylesheets/show.scss
@@ -27,8 +27,8 @@
         .photo__innner{
           background-color: #d3d3d3;
           .main__image{
-            width: 100%;
-            height: 100%;
+            width: 300px;
+            height: 300px;
             object-fit: cover;
           }
           ul{
