--- a/app/assets/stylesheets/show.scss
+++ b/app/assets/stylesheets/show.scss
@@ -29,7 +29,7 @@
           .main__image{
             width: 300px;
             height: 300px;
-            object-fit: cover;
+            object-fit: contain;
           }
           ul{
             display: flex;
